--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp-html-replace": "^1.5.5",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-less": "^3.0.5",
+    "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
     "jshint": "^2.8.0",
