--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.10.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
@@ -32,6 +33,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
     "gulp-usemin": "^0.3.16",
