--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
+    "gulp-clean-css": "^2.0.4",
     "gulp-concat": "^2.6.0",
     "gulp-csslint": "^0.2.0",
     "gulp-cssmin": "^0.1.7",
